# igrow-service

./: .gitignore  .project  BUILD  INSTALL  README.md  pom.xml  postgis.notes  rcheats  readobs.R
depends/protobuf-2.5.0/: Makefile  config.status  libtool
depends/protobuf-2.5.0/gtest/: Makefile  config.status  libtool
depends/protobuf-2.5.0/src/: Makefile  libprotoc.la  protoc
depends/protobuf-2.5.0/src/.deps/: atomicops_internals_x86_gcc.Plo  atomicops_internals_x86_msvc.Plo  code_generator.Plo  coded_stream.Plo  command_line_interface.Plo  common.Plo  cpp_enum.Plo  cpp_enum_field.Plo  cpp_extension.Plo  cpp_field.Plo  cpp_file.Plo  cpp_generator.Plo  cpp_helpers.Plo  cpp_message.Plo  cpp_message_field.Plo  cpp_primitive_field.Plo  cpp_service.Plo  cpp_string_field.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  dynamic_message.Plo  extension_set.Plo  extension_set_heavy.Plo  generated_message_reflection.Plo  generated_message_util.Plo  gzip_stream.Plo  importer.Plo  java_doc_comment.Plo  java_enum.Plo  java_enum_field.Plo  java_extension.Plo  java_field.Plo  java_file.Plo  java_generator.Plo  java_helpers.Plo  (+31 more)
device-service/: .classpath  .project  maven.depends  pom.xml
docker/: 2-init-observations-table.sql  3-init-devices-table.sql  Dockerfile  docker-compose.yml
docker/rabbitmq/: Dockerfile  docker-entrypoint-hooks.sh  on-startup.sh
docker/timescaledb-postgis/: 1-init-user-db.sh  2-init-observations-table.sql  4-init-userprofile-table.sql  5-init-userprofile-device-table.sql  Dockerfile
gjl-api-java/: .classpath  .project  pom.xml
gjl-api-java/interfaces/: device.proto  location.proto  locator.proto  locatorsessioninfo.proto  observation.proto
igrow-api-java/: .classpath  .project  pom.xml
igrow-api-java/interfaces/: device.proto  location.proto  locator.proto  observation.proto  sensor.proto
interfaces/: device.proto  location.proto  locator.proto  locatorsessioninfo.proto  observation.proto  registration.proto
locator-service/: .classpath  .project  README  maven.depends  pom.xml
observation-service/: .classpath  .project  maven.depends  pom.xml
observation-service/interfaces/: gjl.proto  location.proto
observation-service/observice/: Makefile  Makefile.am  Makefile.in  config-h.in  configure  configure.ac  libtool
observation-service/observice/src/: Makefile  Makefile.am  Makefile.in
observation-service/observice/src/libspar/: Makefile  Makefile.am  Makefile.in  jfclient.cpp
observation-service/observice/src/observice/: Makefile  Makefile.am  Makefile.in  ObservationService.cpp  observice  observice.cpp  tcp_connection.h  tcp_server.h
observation-service/observice/src/obsub/: Makefile  Makefile.in  obsub  obsub.cpp
registration-service/: .classpath  .project
rt-obs-service/interfaces/: observation.proto
rt-obs-service/observice/: aclocal.m4  config.h
rt-obs-service/observice/src/: Makefile.in
(+362 files in other folders)
